fix overflow

--- a/main.css
+++ b/main.css
@@ -325,9 +325,4 @@ img {
     #hello span {
         font-size: 16px;
     }
-
-    #hello .hello-content {
-      margin-top: 100px;
-    }
-
 }
